cabal-version:       1.12

name:                hs-markup
version:             0.1.0.0
synopsis:            A custom markup generator
description:         -
homepage:            -
bug-reports:         -
license:             ApacheLicense2
license-file:        LICENSE
author:              -
maintainer:          -
category:            -
extra-doc-files:
  README.md
  
library
  hs-source-dirs: src
  build-depends:
      base
    , mtl
    , directory
    , filepath
  exposed-modules:
    HsMarkup
      HsMarkup.Convert
      HsMarkup.Env
      HsMarkup.Directory
      HsMarkup.Html
        HsMarkup.Html.Internal
      HsMarkup.Markup
  default-language: Haskell2010
  ghc-options:
    -Wall
  -- other-modules:

executable hs-markup-gen
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    OptParse
  build-depends:
      base
    , directory
    , optparse-applicative
    , hs-markup
  default-language: Haskell2010
  ghc-options:
    -O

test-suite hs-markup-gen-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
    MarkupParsingSpec
    
  build-depends:
      base
    , hspec
    , hspec-discover
    , raw-strings-qq
    , hs-markup
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover